--- a/css/addressbookform.css
+++ b/css/addressbookform.css
@@ -26,7 +26,7 @@ body{
 }
 
 .logo-content-img{
-    border: solid 0px #323333;
+    border: solid 0px #42515f;
 }
 
 .address-text{
@@ -91,3 +91,69 @@ body{
      cursor: pointer;
      padding-top: 10px;
  }
+
+  .row-content{
+    display: flex;
+    padding-right:  170px; 
+    padding-left:  150px; 
+    flex-direction: column;
+    margin-bottom: 40px;
+
+}
+
+.row-content-exp{
+    display: flex;
+    padding-right:  150px; 
+    padding-left:  150px; 
+    flex-direction: row;
+    margin-bottom: 40px;
+    align-items: center;
+
+}
+
+.oneRow-content{
+    display: flex;
+    padding-right:  20px;
+    width: 100%; 
+    justify-content: flex-end;
+    align-items: flex-start;
+    padding-left:  0px; 
+    flex-direction: column;
+    margin-bottom: 20px;
+
+}
+
+.text{
+    font-size:16px;
+    color: #42515f;
+    opacity: 1;
+    font-family: Roboto;
+}
+
+.label{
+    text-align: left;
+    font: normal normal normal 16px/24px Roboto;
+    letter-spacing: 0px;
+    color: #42515F;
+    opacity: 1;
+}
+
+.input{
+    width: 100%;
+    padding: 12px;
+    margin-right: 15px;
+    border-radius: 4px;
+    resize: vertical;
+    border: 1px solid #BDBDBD;
+    opacity: 1;
+}
+
+.select-input{
+    width: 100%;
+    padding: 12px;
+    margin-right: 15px;
+    border-radius: 4px;
+    resize: vertical;
+    border: 1px solid #BDBDBD;
+    opacity: 1;
+} 
